# kospikosdaqlivermorepearlsbkim21

./: README.md  dashboard.py  failed_tickers.csv  latest_kospi.csv  pyproject.toml  refresh.py
.github/workflows/: refresh.yml
data/: kospi_20251020.csv  kospi_20251022.csv  kospi_20251024.csv  kospi_20251025.csv  kospi_20251026.csv  kospi_20251027.csv  kospi_20251030.csv  kospi_20251031.csv  kospi_20251101.csv  kospi_20251106.csv  kospi_20251107.csv  kospi_20251109.csv  kospi_20251110.csv  kospi_20251113.csv  kospi_20251114.csv  kospi_20251116.csv  kospi_20251117.csv  kospi_20251118.csv  kospi_20251120.csv  kospi_20251122.csv
sectors/: Unknown.csv
tiers/: Large_Cap.csv  Mid_Cap.csv  Small_Cap.csv
